--- a/DepartmentModule/Views/Subjects/Create.cshtml
+++ b/DepartmentModule/Views/Subjects/Create.cshtml
@@ -18,6 +18,20 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Program" class="control-label"></label>
+                <select asp-for="ProgramID" class="form-control" asp-items="ViewBag.ProgramID">
+                    <option value="">-- Select Department --</option>
+                </select>
+                <span asp-validation-for="ProgramID" class="text-danger" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Themes" class="control-label"></label>
+                <select asp-for="ThemesID" class="form-control" asp-items="ViewBag.ThemesID">
+                    <option value="">-- Select Department --</option>
+                </select>
+                <span asp-validation-for="ThemesID" class="text-danger" />
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
