--- a/DepartmentModule/Views/Subjects/Edit.cshtml
+++ b/DepartmentModule/Views/Subjects/Edit.cshtml
@@ -29,22 +29,32 @@
         </li>
         
     </ul>
-    <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
-    </div>
-    <div class="card-footer text-muted">
-        2 days ago
-    </div>
+    
 </div>
 <div class="card">
     <div class="card-body">
         <h4 class="card-title">Search Google || Maydoni </h4>
-        <textarea  rows="2" cols="130"></textarea>
-        <a class="btn btn-primary " href="#" >Serach</a>
+        <!--Diskdan ma'lumot ko'chrish-->
+        <div class="form-group">
+            <div class="input-group mb-3">
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="inputGroupFile02">
+                    <label class="custom-file-label" for="inputGroupFile02">Choose file</label>
+                </div>
+                <div class="input-group-append">
+                    <span class="input-group-text">Upload</span>
+                </div>
+            </div>
+        </div>
+        <!--Good dan Iboralar bo'yicha ma'lumot qo'shish-->
+        <div class="form-group">
+            <label class="col-form-label col-form-label-sm" for="inputSmall">Small input</label>
+            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" id="inputSmall">
+        </div>
+
+
     </div>
 </div>
-
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
