--- a/DepartmentModule/Views/Subjects/Create.cshtml
+++ b/DepartmentModule/Views/Subjects/Create.cshtml
@@ -19,14 +19,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Program" class="control-label"></label>
-                <select asp-for="Program.Id" class="form-control" asp-items="ViewBag.Program.Id">
+                <select asp-for="Program.Id" class="form-control" asp-items="ViewBag.ProgramId">
                     <option value="">-- Select Department --</option>
                 </select>
                 <span asp-validation-for="Program.Id" class="text-danger" />
             </div>
             <div class="form-group">
                 <label asp-for="Themes" class="control-label"></label>
-                <select asp-for="Themes.Id" class="form-control" asp-items="ViewBag.Themes.Id">
+                <select asp-for="Themes.Id" class="form-control" asp-items="ViewBag.ThemesId">
                     <option value="">-- Select Department --</option>
                 </select>
                 <span asp-validation-for="Themes.Id" class="text-danger" />
