--- a/DepartmentModule/Views/Subjects/Create.cshtml
+++ b/DepartmentModule/Views/Subjects/Create.cshtml
@@ -10,45 +10,20 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" >
+        <form asp-action="Create" method="post" enctype="multipart/form-data" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">  
-                <div class="input-group mb-6">
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" name="uploadedFile">
-                            <label class="custom-file-label" for="inputGroupFile02">Choose file</label>
-                        </div>
-                        <div class="input-group-append">
-                            <input  class="input-group-text" value="Upload"/>
-                        </div>
-                    </div>
-             </div>
-             <div class="form-group">
-                    @*<label asp-for="Themes" class="control-label"></label>
-                    <select asp-for="Themes.Id" class="form-control" asp-items="ViewBag.Themes.Id">
-                        <option value="">-- Select Department --</option>
-                    </select>
-                    <span asp-validation-for="Themes.Id" class="text-danger" />*@
-              </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-           </form>
-        <form asp-action="Upload" asp-controller="Books" method="post" enctype="multipart/form-data" >
             <div class="form-group">
-                <div class="input-group mb-6">
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="uploadedFile">
-                        <label class="custom-file-label" for="inputGroupFile02">Choose file</label>
-                    </div>
-                       <button  class="btn btn-primary" value="Upload" />
-                    
-                </div>
+                <label asp-for="Program" class="control-label"></label>
+                <input asp-for="Program" type="file" name="programFile">
+                <span asp-validation-for="Program" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
