new change for table

--- a/DepartmentModule/Views/Subjects/Index.cshtml
+++ b/DepartmentModule/Views/Subjects/Index.cshtml
@@ -9,50 +9,33 @@
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
     <thead>
         <tr>
-            <th scope="col">
+            <th class="text-xl-center" rowspan="2">
                 CCC
             </th>
-            <th scope="col">
-                <section>
-                    <table>
-                        <thead>
-                            <tr>
-                                Adabiyot
-                            </tr>
-                       </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    Assosiy
+            <th colspan="2" class="text-center">
+                Adabiyotlar
+            </th>
+            </tr>
+                            
+        <tr class="text-center align-content-center">
+                                <td >
+                                    Asosiy
                                 </td>
-                                <td>
+                                <td >
                                     Qo'shimcha
                                 </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-            </th>
-        </tr>
+       </tr>
     </thead>
     <tbody>
         <tr>
             <td>
-            <section>
-                <table>
-                    <tbody>
-                        <tr>
-                            AAA
-                        </tr>
-                        <tr>
-                            BBB
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
+            a
+            </td>
+            <td>
+                123
             </td>
             <td>
                 123
