--- a/DepartmentModule/Views/Subjects/Edit.cshtml
+++ b/DepartmentModule/Views/Subjects/Edit.cshtml
@@ -20,18 +20,15 @@
                         <td>
                             <label asp-for="Program.Name" class="control-label"></label>
                         </td>
+                        <td >
+                            <input readonly="readonly"  asp-for="Program.Name" class="form-control" />
+                      
+                        </td>
                         <td>
-                            <input asp-for="Program.Name" class="form-control" />
+                            <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Select</a>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
-                            <label asp-for="Program.Url" class="control-label"></label>
-                        </td>
-                        <td>
-                            <input asp-for="Program.Name" name="programFile" type="file"  />
-                        </td>
-                    </tr>
+                    
 
                 </table>
             </div>
@@ -44,15 +41,10 @@
                             <label asp-for="Themes.Name" class="control-label"></label>
                         </td>
                         <td>
-                            <input asp-for="Themes.Name" class="form-control" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label asp-for="Themes.Url" class="control-label"></label>
+                            <input readonly="readonly" asp-for="Themes.Name" class="form-control" />
                         </td>
                         <td>
-                            <input asp-for="Themes.Name" name="themesFile" type="file" />
+                            <a asp-controller="Books" asp-action="AddThemes" class="btn btn-primary">Select</a>
                         </td>
                     </tr>
 
@@ -81,9 +73,8 @@
                             </td>
                             
                             <td>
-                                <a asp-controller="Books" asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a>
                                 <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
-                                <a asp-controller="Books" asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                                <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
                             </td>
                         </tr>
                         }
@@ -103,7 +94,7 @@
                             </td>
 
                             <td>
-                                <a asp-controller="Books" asp-action="AddAdditionalLiterature" class="btn btn-primary ">Add New</a>
+                                <a asp-controller="Books" asp-action="AddAdditionallLiterature" class="btn btn-primary ">Add New</a>
                             </td>
                         </tr>
                     </thead>
@@ -116,7 +107,6 @@
                             </td>
 
                             <td>
-                                <a asp-controller="Books" asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a>
                                 <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
                                 <a asp-controller="Books" asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
                             </td>
