--- a/DepartmentModule/Views/Books/Create.cshtml
+++ b/DepartmentModule/Views/Books/Create.cshtml
@@ -4,35 +4,73 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Book</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<br />
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2">
+                <div class="input-group">
+                    <input type="hidden" name="search_param" value="all" id="search_param">
+                    <input type="text" class="form-control" name="x" placeholder=".ppt pdf doc docx Search for Google...">
+                    <span  class="input-group-btn">
+                        <a asp-controller="Books" asp-action="GoogleSearch"  class="btn btn-success">
+                            <span  class="glyphicon glyphicon-search">                              
+                            </span>
+                        </a>
+                        
+                    </span>
+
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Url" class="control-label"></label>
-                <input asp-for="Url" class="form-control" />
-                <span asp-validation-for="Url" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+<br>
+<table class="table table-hover">
+    <tr class="table-active">
+        <th >
+            Name
+        </th>
+        <th>
+            Url
+        </th>
+        <th>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+        </th>
+    </tr>
+    <tbody>
+        @foreach (var item in ViewBag.fun)
+        {
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+            <tr class="table-light">
+                <td>
+                    @item.Name
+                </td>
+                <td>
+                    @item.Url
+                </td>
+                <td width="60px">
+                    <a asp-controller="Books" asp-action="Save" asp-route-id="@item.Id" class="btn btn-primary">
+                        +
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<br />
+
+
+
+ 
+
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+
+
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
