--- a/DepartmentModule/Views/Books/Index.cshtml
+++ b/DepartmentModule/Views/Books/Index.cshtml
@@ -1,11 +1,14 @@
 ﻿@model IEnumerable<DepartmentModule.Models.Book>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Select";
 }
 
-<h1>Select</h1>
 
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Add new Book</a>
+</p>
 
 <table class="table">
     <thead>
@@ -33,7 +36,9 @@
                     <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a>
                     <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
                     <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
-                 </td>
+                    <a asp-controller="Subjects" asp-action="Select" class="btn btn-primary" asp-route-id="@item.Id">Select</a>
+
+                </td>
             </tr>
         }
     </tbody>
