--- a/DepartmentModule/Views/Shared/_Layout.cshtml
+++ b/DepartmentModule/Views/Shared/_Layout.cshtml
@@ -12,25 +12,18 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DepartmentModule</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                        </ul>
-                    </div>*@
-            </div>
-        </nav>
+        <nav  class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DepartmentModule</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <form class="form-inline my-2 my-lg-0">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <partial name="_LoginPartial" />
+                </ul>
+            </form>
+            
+        </nav> 
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -49,7 +42,8 @@
     
     <script>
         $(document).ready(function (e) {
-            $('.search-panel .dropdown-menu').find('a').click(function (e) {
+            $('.search-panel .dropdown-menu').find('a').click(function (e)
+            {
                 e.preventDefault();
                 var param = $(this).attr("href").replace("#", "");
                 var concept = $(this).text();
