--- a/DepartmentModule/Views/Subjects/Details.cshtml
+++ b/DepartmentModule/Views/Subjects/Details.cshtml
@@ -4,20 +4,24 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Subject</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
+<div class="card">
+    <div class="card-header">
+        @Html.DisplayNameFor(model => model.Name) :  @Html.DisplayFor(model => model.Name)
+    </div>
+    <div class="card-body">
+  <table class="table">
+      <tr class="table-primary">
+          <th>
+              @Html.DisplayFor(model => model.Program.Name) 
+          </th>
+          <th>
+              @Html.DisplayFor(model => model.Themes.Name) 
+          </th>
+      </tr>
+  </table>
+    </div>
 </div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
