--- a/DepartmentModule/Views/Subjects/Edit.cshtml
+++ b/DepartmentModule/Views/Subjects/Edit.cshtml
@@ -26,6 +26,7 @@
                         </td>
                         <td>
                             <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Select</a>
+                            <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Open</a>
                         </td>
                     </tr>
                     
@@ -108,7 +109,7 @@
 
                             <td>
                                 <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
-                                <a asp-controller="Books" asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                                <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
                             </td>
                         </tr>
                         }
