--- a/DepartmentModule/Views/Books/Create.cshtml
+++ b/DepartmentModule/Views/Books/Create.cshtml
@@ -42,24 +42,40 @@
 </form>
 </div>
 <br />
-<div class="container">
-    <div class="row">
-        <div class="col-xs-8 col-xs-offset-2">
-            <div class="input-group">
-                <input type="hidden" name="search_param" value="all" id="search_param">
-                <input type="text" class="form-control" name="x" placeholder=".ppt pdf doc docx Search for Google...">
-                <span class="input-group-btn">
-                    <a asp-controller="Books" asp-action="GoogleSearch" class="btn btn-success">
-                        <span class="glyphicon glyphicon-search">
-                        </span>
-                    </a>
+<form asp-action="GoogleSearch" method="post" enctype="multipart/form-data">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2">
+                <div class="input-group">
+                    <select name="type" typeof="string" class="input-group-prepend">
+                        <option>
+                            PDF
+                        </option>
+                        <option>
+                            DOC
+                        </option>
+                        <option>
+                            PPT
+                        </option>
+                    </select>
+                </div>
+                <div class="input-group">
 
-                </span>
+                    <input type="text" class="form-control" name="quary" placeholder=".ppt pdf doc docx Search for Google...">
+                    <span class="input-group-btn">
+                        <button type="submit" class="btn btn-success">
+                            <span class="glyphicon glyphicon-search">
+                            </span>
+                        </button>
 
+                    </span>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
+
 <br>
 <table class="table table-hover">
     <tr class="table-active">
