new change code for Layout.cshtml

--- a/DepartmentModule/Views/Books/Create.cshtml
+++ b/DepartmentModule/Views/Books/Create.cshtml
@@ -3,8 +3,6 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-
 <br />
 
 <div class="border-dark">
@@ -36,16 +34,13 @@
 
         </tr >
     </table>
-   
-   
-   
 </form>
 </div>
 <br />
 <form asp-action="GoogleSearch" method="post" enctype="multipart/form-data">
     <div class="container">
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
+            <div class="col-10">
                 <div class="input-group">
                     <select name="type" typeof="string" class="input-group-prepend">
                         <option>
