--- a/DepartmentModule/Views/Shared/_Layout.cshtml
+++ b/DepartmentModule/Views/Shared/_Layout.cshtml
@@ -7,24 +7,23 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 </head>
 <body>
     <header>
-        <nav  class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DepartmentModule</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <form class="form-inline my-2 my-lg-0">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <partial name="_LoginPartial" />
-                </ul>
-            </form>
-            
-        </nav> 
-    </header>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <nav class="navbar navbar-expand">
+                    <ul class="nav nav-tabs-bordered">
+                        <li><a asp-area="" asp-controller="Subjects" asp-action="Index">DepartmentModule</a></li>
+                        <li><a asp-controller="Subjects" asp-action="Index">Subjects</a></li>
+                        <li><a asp-controller="Books" asp-action="Index">Books</a></li>
+                        <partial name="_LoginPartial" />
+                    </ul>
+                </nav>
+            </div>
+         </div>
+</header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
