--- a/DepartmentModule/Views/Subjects/Index.cshtml
+++ b/DepartmentModule/Views/Subjects/Index.cshtml
@@ -4,14 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-info" asp-action="Create">Create New</a>
 </p>
+
 <table class="table table-hover table-bordered">
     <thead>
-        <tr>
+        <tr class="table-active">
             <th class="text-xl-center" rowspan="2">
                 Fan Nomi
             </th>
@@ -29,7 +28,7 @@
             </th>
         </tr>
 
-        <tr class="text-center align-content-center">
+        <tr class="table-active text-center align-content-center">
             <td>
                 Asosiy
             </td>
@@ -88,24 +87,6 @@
         }
         </tbody>
 </table>
-
-
-
-
-@*@foreach (var item in Model)
-    {
-       <div class="card border-primary mb-3" style="max-width: 20rem;">
-                   <div class="card-header">@Html.DisplayFor(modelItem => item.Name)</div>
-                   <div class="card-body">
-                       <h4 class="card-title">Primary card title</h4>
-                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                   </div>
-
-                   <a class="btn btn-warning " asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                   <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-
-       </div>}*@
-
 
 
 
