--- a/DepartmentModule/Views/Books/Create.cshtml
+++ b/DepartmentModule/Views/Books/Create.cshtml
@@ -3,13 +3,11 @@
 @{
     ViewData["Title"] = "Create";
 }
-<br />
-
 <div class="border-dark">
 <form asp-action="Create" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <table class="table">
-        <tr class="table-success">
+        <tr class="table-active">
             <td>
                 <div class="form-group">
                     <label  class="control-label">Select your local disk</label>
@@ -18,7 +16,7 @@
                 </div>
             </td>
         </tr>
-        <tr class="table-success">
+        <tr class="table-active">
 
             <td>
                 <div class="form-group">
@@ -27,11 +25,9 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary"/>
                 </div>
-
             </td>
-
         </tr >
     </table>
 </form>
@@ -55,16 +51,13 @@
                     </select>
                 </div>
                 <div class="input-group">
-
                     <input type="text" class="form-control" name="query" placeholder=".ppt pdf doc docx Search for Google...">
                     <span class="input-group-btn">
                         <button type="submit" class="btn btn-success">
                             <span class="glyphicon glyphicon-search">
                             </span>
                         </button>
-
                     </span>
-
                 </div>
             </div>
         </div>
