--- a/DepartmentModule/Views/Shared/_Layout.cshtml
+++ b/DepartmentModule/Views/Shared/_Layout.cshtml
@@ -11,28 +11,32 @@
 </head>
 <body>
     <header>
-        <div class="panel panel-default">
+        <div class="panel panel-default bg-info">
             <div class="panel-body">
                 <nav class="navbar navbar-expand">
                     <ul class="nav nav-tabs-bordered">
-                        <li><a asp-area="" asp-controller="Subjects" asp-action="Index">DepartmentModule</a></li>
-                        <li><a asp-controller="Subjects" asp-action="Index">Subjects</a></li>
-                        <li><a asp-controller="Books" asp-action="Index">Books</a></li>
+                        <li><a asp-area="" asp-controller="Subjects" class="text-body" asp-action="Index">DepartmentModule</a></li>
+                        <li><a asp-controller="Subjects" asp-action="Index" class="text-body">Subjects</a></li>
+                        <li><a asp-controller="Books" asp-action="Index" class="text-body">Books</a></li>
                         <partial name="_LoginPartial" />
                     </ul>
                 </nav>
             </div>
          </div>
 </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+   
+    <div class="card-body">
+        <div class="container bg-white">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
     </div>
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - DepartmentModule - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - DepartmentModule - <a asp-area="" asp-controller="Subjects" asp-action="Index">Info</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
