--- a/DepartmentModule/Views/Subjects/Create.cshtml
+++ b/DepartmentModule/Views/Subjects/Create.cshtml
@@ -4,10 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
 <h4>Subject</h4>
-<hr />
 <form asp-action="Create" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -18,7 +15,7 @@
     </div>
     <label asp-for="Program" class="control-label"></label>
     <div class="form-group card">
-        <table cellpadding="10">
+        <table cellpadding="10" class="table-active">
             <tr>
                 <td>
                     <label asp-for="Program.Name" class="control-label"></label>
@@ -31,14 +28,11 @@
                     <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Select</a>
                  </td>
             </tr>
-
-
         </table>
     </div>
     <label asp-for="Themes" class="control-label"></label>
     <div class="form-group card">
-        <table cellpadding="10">
-
+        <table cellpadding="10" class="table-active">
             <tr>
                 <td>
                     <label asp-for="Themes.Name" class="control-label"></label>
@@ -57,13 +51,12 @@
         <label asp-for="Literatures" class="control-label"></label>
         <table class="table table-hover table-bordered">
             <thead>
-                <tr>
-
+                <tr class="table-active">
                     <td>
                         Name
                     </td>
                     <td>
-                        <a asp-controller="Books" asp-action="AddLiterature" class="btn btn-primary ">Add New</a>
+                        <a asp-controller="Books" asp-action="AddLiterature" class="btn btn-info">Add New</a>
                     </td>
                 </tr>
             </thead>
@@ -84,20 +77,19 @@
             </tbody>
 
         </table>
-
-    </div>
+</div>
 
     <div class="form-group">
         <label asp-for="AdditionalLiteratures" class="control-label"></label>
         <table class="table table-hover table-bordered">
             <thead>
-                <tr>
+                <tr class="table-active">
                     <td>
                         Name
                     </td>
 
                     <td>
-                        <a asp-controller="Books" asp-action="AddAdditionallLiterature" class="btn btn-primary ">Add New</a>
+                        <a asp-controller="Books" asp-action="AddAdditionallLiterature" class="btn btn-info">Add New</a>
                     </td>
                 </tr>
             </thead>
@@ -120,7 +112,6 @@
         </table>
 
     </div>
-
 
     <div class="form-group">
         <input type="submit" value="Save" class="btn btn-primary" />
