--- a/DepartmentModule/Views/Books/Create.cshtml
+++ b/DepartmentModule/Views/Books/Create.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Create";
 }
 <div class="border-dark">
-<form asp-action="Create" method="post" enctype="multipart/form-data">
+<form asp-action="Create" style="background:#909294" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <table class="table">
-        <tr class="table-active">
+        <tr >
             <td>
                 <div class="form-group">
                     <label  class="control-label">Select your local disk</label>
@@ -16,8 +16,7 @@
                 </div>
             </td>
         </tr>
-        <tr class="table-active">
-
+        <tr >
             <td>
                 <div class="form-group">
                     <label  class="control-label"> As File Name</label>
@@ -34,9 +33,8 @@
 </div>
 <br />
 <form asp-action="GoogleSearch" method="post" enctype="multipart/form-data">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-10">
                 <div class="input-group">
                     <select name="type" typeof="string" class="input-group-prepend">
                         <option>
@@ -59,7 +57,7 @@
                         </button>
                     </span>
                 </div>
-            </div>
+            
         </div>
     </div>
 </form>
@@ -83,7 +81,7 @@
                     @item.Name
                 </td>
                 <td width="60px">
-                    <a asp-controller="Books" asp-action="Save" class="btn btn-primary">
+                    <a asp-controller="Books" asp-action="Save" >
                         @Html.ActionLink("Save", "Save", new { Id = item.Id, Name = item.Name, Url = item.Url})
                     </a>
                 </td>
