--- a/DepartmentModule/Views/Books/Index.cshtml
+++ b/DepartmentModule/Views/Books/Index.cshtml
@@ -27,10 +27,10 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
-                    <a asp-controller="Subjects" asp-action="Select" class="btn btn-primary" asp-route-id="@item.Id">Select</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.BookID">Edit</a>
+                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.BookID">Details</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.BookID">Delete</a>
+                    <a asp-controller="Subjects" asp-action="Select" class="btn btn-primary" asp-route-id="@item.BookID">Select</a>
 
                 </td>
             </tr>
