--- a/DepartmentModule/Views/Subjects/Create.cshtml
+++ b/DepartmentModule/Views/Subjects/Create.cshtml
@@ -25,7 +25,9 @@
 
                 </td>
                 <td>
-                    <a asp-controller="Books" asp-action="AddProgram" class="btn btn-info">Select</a>
+                    <button asp-controller="Books" asp-action="AddProgram" class="btn btn-info">     
+                        Select
+                    </button>
                  </td>
             </tr>
         </table>
@@ -41,7 +43,9 @@
                     <input readonly="readonly" asp-for="Themes.Name" class="form-control" />
                 </td>
                 <td>
-                    <a asp-controller="Books" asp-action="AddThemes" class="btn btn-info">Select</a>
+                    <button asp-controller="Books" asp-action="AddThemes" class="btn btn-info">     
+                        Select
+                    </button>
                 </td>
             </tr>
 
@@ -65,12 +69,12 @@
                 {
                     <tr>
                         <td>
-                            @item.Name
+                            @item.Book.Name
                         </td>
 
                         <td>
-                            <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
-                            <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                            <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Book.BookID">Details</a>
+                            <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Book.BookID">Delete</a>
                         </td>
                     </tr>
                 }
@@ -98,12 +102,12 @@
                 {
                     <tr>
                         <td>
-                            @item.Name
+                            @item.Book.Name
                         </td>
 
                         <td>
-                            <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
-                            <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                            <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Book.BookID">Details</a>
+                            <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.Book.BookID">Delete</a>
                         </td>
                     </tr>
                 }
