--- a/DepartmentModule/Views/Subjects/Index.cshtml
+++ b/DepartmentModule/Views/Subjects/Index.cshtml
@@ -58,7 +58,7 @@
                     @foreach (var literature in item.Literatures)
                         {
                         <div class="badge badge-secondary">
-                            @literature.Name
+                            @literature.Book.Name
                         </div>
                         }
                     }
@@ -71,7 +71,7 @@
                          @foreach (var literature in item.AdditionalLiteratures)
                     {
                         <div class="badge badge-secondary">
-                            @literature.Name
+                            @literature.Book.Name
                         </div>
                     }
                     }
@@ -79,9 +79,9 @@
 
 
                     <td>
-                        <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a> 
-                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a> 
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.SubjectID">Edit</a> 
+                    <a asp-action="Details" class="btn btn-success" asp-route-id="@item.SubjectID">Details</a> 
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.SubjectID">Delete</a>
                 </td>
             </tr>
         }
