--- a/DepartmentModule/Views/Subjects/Edit.cshtml
+++ b/DepartmentModule/Views/Subjects/Edit.cshtml
@@ -70,12 +70,12 @@
                         {
                         <tr>
                             <td>
-                                @item.Book.Name
+                                @item.Literature.Name
                             </td>
                             
                             <td>
-                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Book.BookID">Details</a>
-                                <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Book.BookID">Delete</a>
+                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Literature.BookID">Details</a>
+                                <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Literature.BookID">Delete</a>
                             </td>
                         </tr>
                         }
@@ -104,12 +104,12 @@
                         {
                         <tr>
                             <td>
-                                @item.Book.Name
+                                @item.AdditionalLiterature.Name
                             </td>
 
                             <td>
-                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Book.BookID">Details</a>
-                                <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.Book.BookID">Delete</a>
+                                <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.AdditionalLiterature.BookID">Details</a>
+                                <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.AdditionalLiterature.BookID">Delete</a>
                             </td>
                         </tr>
                         }
@@ -121,7 +121,7 @@
             
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary"  />
             </div>
         </form>
 
